Z-index fix

--- a/content/themes/rolledesign/css/dev/global.css
+++ b/content/themes/rolledesign/css/dev/global.css
@@ -1757,7 +1757,9 @@ pre {
 
 .block-hero .content {
   margin-top: 15rem;
+  position: relative;
   text-align: center;
+  z-index: 1;
 }
 
 @media (max-width: 500px) {
@@ -2218,7 +2220,6 @@ pre[class*="language-"] {
   -ms-overflow-style: -ms-autohiding-scrollbar;
   overflow-x: auto;
   -moz-tab-size: 4;
-    -o-tab-size: 4;
        tab-size: 4;
   text-align: left;
   white-space: pre;
@@ -2458,7 +2459,6 @@ pre[class*="language-"] {
           hyphens: none;
   line-height: 1.4;
   -moz-tab-size: 4;
-    -o-tab-size: 4;
        tab-size: 4;
   text-align: left;
   white-space: pre;
