--- a/content/themes/rolledesign/sass/layout/_hero.scss
+++ b/content/themes/rolledesign/sass/layout/_hero.scss
@@ -57,7 +57,9 @@
 
   .content {
     margin-top: 15rem;
+    position: relative;
     text-align: center;
+    z-index: 1;
 
     @media (max-width: 500px) {
       margin-top: 12rem;
